<resources>

    <string name="appName">Fachschaftsdroide</string>

    <!-- misc -->
    <string name="refresh">Aktualisieren</string>
    <string name="die_fachschaft_de" translatable="false">http://die-fachschaft.de/</string>

    <!-- status -->
    <string name="statusOpen">Wir haben gerade <b>geöffnet</b>!</string>
    <string name="statusUnknown">Status konnte nicht geladen werden.</string>
    <string name="statusClosed">Die Fachschaft ist gerade geschlossen.</string>


    <!--week-->
    <string name="oddWeek">Es ist gerade eine gerade Woche.</string>
    <string name="evenWeek">Es ist gerade eine ungerade Woche.</string>

    <!-- meeting -->
    <string name="meetingDescription">Nächste Sitzung in E0.143 - um 18ct während der Vorlesungszeit, 16ct in der vorlesungsfreien Zeit:</string>

    <!-- drawer items -->
    <string name="fs">Die Fachschaft</string>
    <string name="news">Neuigkeiten</string>
    <string name="drawerCategoryNews">Aktuelles</string>
    <string name="meetings">Sitzungen</string>
    <string name="contact">Kontakt</string>
    <string name="drawerCategoryAboutApp">Der Fachschaftsdroide</string>
    <string name="about">Über die App</string>
    <string name="map">Karte</string>

    <!-- contact -->
    <string name="telefon">Telefon</string>
    <string name="email">Email</string>
    <string name="fsmiAddress" translatable="false">Fachschaft Mathematik/Informatik\nRaum E1.311\nWarburger Straße 100\n33098 Paderborn</string>
    <string name="fsmiQueryAddress" translatable="false">Fachschaft+Mathematik/Informatik+Warburger+Straße+100,+Paderborn</string>
    <string name="adresse">Adresse</string>
    <string name="fsmiMail" translatable="false">fsmi@uni-paderborn.de</string>
    <string name="fsmiTelephone" translatable="false">05251 &#8212; 60 32 60</string>
    <string name="fsmiRoomCampus" translatable="false">E1.311</string>
    <string name="add_contact">Zu Kontakten hinzufügen</string>

    <!-- licenses -->
    <string name="apacheLicense" translatable="false">Apache License 2.0</string>
    <string name="unknownLicense" translatable="false">Unbekannt</string>

    <!-- news -->
    <string name="newsHeadline">Neuigkeiten</string>
    <string name="newsLoadingTitle">Neuigkeiten</string>
    <string name="newsLoadingDescription">Die Neuigkeiten werden geladen.</string>
    <string name="misc">Allgemein</string>
    <string name="statusLoadingMessage">Status wird gerade geladen.</string>
    <string name="loadingNews">Werden gerade geladen - sofern eine Internetverbindung verfügbar ist ;)</string>

    <!--navigation-->
    <string name="drawerOpen">Navigation öffnen</string>
    <string name="drawerClose">Navigation schließen</string>

    <!--about-->
    <string name="libraryDescriptionFsdroid">Der Fachschaftsdroide ist die offizielle App der Fachschaft Mathematik/Informatik.</string>
    <string name="libraryDescriptionAndroidAnnotations" translatable="false">AndroidAnnotations ist eine Bibilothek  an Open Source framework that speeds up Android development. It
            takes care of the plumbing, and lets you concentrate on what\'s really important. By
            simplifying your code, it facilitates its maintenance.</string>
    <string name="libraryDescriptionCards" translatable="false">A library to simply implement card layouts.</string>
    <string name="libraryDescriptionJackson" translatable="false">Inspired by the quality and variety of XML tooling available for the Java platform
            (StAX, JAXB, etc.), the Jackson is a multi-purpose Java library for processing JSON data
            format. Jackson aims to be the best possible combination of fast, correct, lightweight,
            and ergonomic for developers.\nIt was decided to use Jackson under the terms of the
            Apache License.</string>
    <string name="libraryDescription9old" translatable="false">Android library for using the Honeycomb animation API on all versions of the platform
            back to 1.0!</string>
    <string name="libraryDescriptionSpring" translatable="false">Spring for Android is an extension of the Spring Framework that aims to simplify the
            development of native Android applications.</string>
</resources>